--- a/Website/static/assets/css/main.css
+++ b/Website/static/assets/css/main.css
@@ -2271,3 +2271,14 @@ button,
     border-top: 0;
     margin-top: 0;
     padding-top: 0; }
+
+    #fan-count-plot
+    {
+      margin-top: 0;
+      margin-bottom: 0.5em;
+    }
+
+    #fan-count-plot svg
+    {
+      max-width: 100%;
+    }
